--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-[Blog](new_blog.html) about random *stuff*. If I don't have enough energy to write a full post, I
-usually publish thoughts in my [rss microblog](0x1d107.xml).
+[Blog](new_blog.html) about random *stuff* (mostly tech-related).
+If I don't have enough energy to write a full post, 
+I usually publish thoughts in my [rss microblog](0x1d107.xml).
 
 If you want to contact the admin, see [contacts](contacts.html)
