--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-[Blog](new_blog.html) about random *stuff* (mostly tech-related).
+[Blog](new-blog.html) about random *stuff* (mostly tech-related).
 If I don't have enough energy to write a full post, 
 I usually publish thoughts in my [rss microblog](0x1d107.xml).
 
