--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 [Blog](new-blog.html) about random *stuff* (mostly tech-related).
 If I don't have enough energy to write a full post, 
-I usually publish thoughts in my [rss microblog](0x1d107.xml).
+I usually publish interesting links in my [rss microblog](0x1d107.xml).
 
 If you want to contact the admin, see [contacts](contacts.html)
